--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"react-social-login-buttons": "^1.3.6",
 		"redux": "^4.0.0",
 		"redux-form": "^7.3.0",
-		"redux-thunk": "^2.2.0"
+		"redux-thunk": "^2.2.0",
+		"underscore": "^1.13.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
