--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@material-ui/core": "^1.1.0",
 		"@material-ui/icons": "^1.1.0",
 		"axios": "^0.18.0",
+		"lodash.throttle": "^4.1.1",
 		"materialize-css": "^0.100.2",
 		"react": "^16.4.0",
 		"react-dom": "^16.4.0",
